clipboard resized, clipboarrd button no longer generates new pw for no reason

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
            
                 
                 <button class="btn" id="clipboard">
-                    <span class="material-symbols-outlined">
+                    <span class="material-symbols-outlined"
+                    id="clippy">
                         content_paste
                 <!-- <i class="far fa-clipboard"></i> -->
                     </span>
